# playwright-proxy

./: Cargo.toml  DEPLOYMENT.md  Dockerfile  HELM_INTEGRATION.md  HELM_SETUP_COMPLETE.md  README.md
.github/workflows/: docker-build.yml  release.yml
helm/playwright-proxy/: .helmignore  Chart.yaml  README.md  values.yaml
helm/playwright-proxy/examples/: development.yaml  production.yaml  staging.yaml
helm/playwright-proxy/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
scripts/: package-helm.sh  validate-helm.sh
src/: main.rs
